fix: add  z-index to float label

--- a/src/components/popup/modules/float-select/float-select.scss
+++ b/src/components/popup/modules/float-select/float-select.scss
@@ -35,6 +35,7 @@
   left: 12px;
   top: 11px;
   transition: 0.2s ease all;
+  z-index: 2;
 }
 
 .as-placeholder {
